@@ -5,6 +5,10 @@ Tool to automate setup and update of development environment.
 image:https://img.shields.io/github/license/devonfw/ide.svg?label=License["Apache License, Version 2.0",link=https://github.com/devonfw/ide/blob/master/LICENSE]
 image:https://img.shields.io/maven-central/v/com.devonfw.tools.ide/devonfw-ide-scripts.svg?label=Maven%20Central["Maven Central",link=https://search.maven.org/search?q=g:com.devonfw.tools.ide]
 image:https://github.com/devonfw/ide/actions/workflows/build.yml/badge.svg["Build Status",link="https://github.com/devonfw/ide/actions/workflows/build.yml"]
+image:https://github.com/devonfw/ide/actions/workflows/test-windows.yml/badge.svg["Windows",link="https://github.com/devonfw/ide/actions/workflows/test-windows.yml"]
+image:https://github.com/devonfw/ide/actions/workflows/test-ubuntu.yml/badge.svg["Ubuntu",link="https://github.com/devonfw/ide/actions/workflows/test-ubuntu.yml"]
+image:https://github.com/devonfw/ide/actions/workflows/test-macos.yml/badge.svg["MacOS",link="https://github.com/devonfw/ide/actions/workflows/test-macos.yml"]
+
 
 == Introduction
 
